change not found handling to 404 page, add 404 entry point to vite config, other misc tweaks

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dash": true
   },
   "dependencies": {
+    "@types/node": "^22.14.1",
     "hono": "4.7.5",
     "react": "19.0.0",
     "react-dom": "19.0.0"
