--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dash": true
   },
   "dependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.40.0",
     "@types/node": "^22.14.1",
     "hono": "4.7.5",
     "react": "19.0.0",
