--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dash": true
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.116.0",
+    "@tanstack/react-router-devtools": "^1.116.0",
     "@types/node": "^22.14.1",
     "hono": "4.7.5",
     "react": "19.0.0",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.0.2",
     "@eslint/js": "9.23.0",
+    "@tanstack/router-plugin": "^1.116.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
